--- a/style.css
+++ b/style.css
@@ -1,6 +1,18 @@
 h1 {
   color: #ebfcfb;
-  font-size: xx-large;
+  font-size: larger;
+  font-family: "LVDC Game Over 2", sans-serif;
+}
+
+h2 {
+  color: #ebfcfb;
+  font-size: medium;
+  font-family: "LVDC Game Over 2", sans-serif;
+}
+p {
+  color: #ebfcfb;
+  font-size: small;
+  font-family: "LVDC Game Over 2", sans-serif;
 }
 body {
   display: flex;
@@ -8,7 +20,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #6c935c;
+  background-color: black;
 }
 
 .score-container {
@@ -19,7 +31,7 @@ body {
   padding-right: 11rem;
 }
 .stadium {
-  background-color: #3c638e;
+  background-color: black;
   position: relative;
   width: 50rem;
   height: 30rem;
@@ -33,8 +45,22 @@ body {
   width: 12px;
   height: 80px;
   top: 40%;
-  background-color: #000;
+  background-color: white;
   border-radius: 20%;
+}
+
+#net {
+  position: absolute;
+  width: 10px;
+  height: 100%;
+  left: 50%;
+  background: repeating-linear-gradient(
+    to bottom,
+    white,
+    white 5px,
+    transparent 5px,
+    transparent 10px
+  );
 }
 
 #P1 {
@@ -49,7 +75,42 @@ body {
   position: absolute;
   width: 20px;
   height: 20px;
-  background-color: #dfff4f;
+  background-color: white;
   left: 47%;
   top: 45%;
+}
+.button_container {
+  padding-top: 2rem;
+  padding-bottom: 2em;
+}
+.start {
+  padding: 10px 20px;
+  font-size: medium;
+  font-family: "LVDC Game Over 2", sans-serif;
+  background-color: white;
+  color: black;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.start:hover {
+  background-color: #070600;
+  color: #ebfcfb;
+}
+
+.gameOverMessage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
